--- a/src/scss/admin/_bloques.scss
+++ b/src/scss/admin/_bloques.scss
@@ -2,17 +2,17 @@
 @use 'base/variables' as v;
 
 .bloques {
-    @include m.contenedor;
-    @include m.tablet {
+   @include m.contenedor;
+   @include m.tablet {
         margin-top: 10rem;
-    }
+   }
 
-    &__grid {
-        @include m.grid(1, 3rem);
-        @include m.desktop {
-            @include m.grid(2, 3rem);
-        }
-    }
+   &__grid {
+       @include m.grid(1, 3rem);
+       @include m.desktop {
+           @include m.grid(2, 3rem);
+       }
+   }
 }
 
 .bloque {
@@ -20,26 +20,24 @@
     color: v.$blanco;
     border-radius: 1rem;
 
-    &:nth-child(1) { 
-        @include m.bg-gradient(#17202A);
+    &:nth-child(1) {
+       @include m.bg-gradient(#F97316);
     }
     &:nth-child(2) {
-        @include m.bg-gradient(#212F3C);
+        @include m.bg-gradient(#A855F7);
     }
     &:nth-child(3) {
-        @include m.bg-gradient(#4A235A);
+        @include m.bg-gradient(#59910b);
     }
-    &:nth-child(4) {
-        @include m.bg-gradient(#512E5F);
-    }
-
+     &:nth-child(4) {
+        @include m.bg-gradient(#17769E);
+     }
     &__heading {
         margin: 1rem 0 2rem 0;
         font-size: 3.6rem;
     }
     &__texto {
-        margin: 1.1rem;
-        font-size: 1.9rem;
+        margin: 1rem 0;
 
         &--cantidad {
             margin-top: 5rem;
@@ -48,5 +46,4 @@
             text-align: center;
         }
     }
-
 }
