--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -11,14 +11,13 @@
         background-color: v.$gris-oscuro;
         padding: 2rem;
     }
-
     &__header-grid {
         display: flex;
         flex-direction: column;
         @include m.tablet {
             flex-direction: row;
             justify-content: space-between;
-            align-items: center
+            align-items: center;
         }
     }
     &__logo {
@@ -56,7 +55,6 @@
         flex-direction: column;
         gap: 1rem;
     }
-
     &__enlace {
         color: lighten(v.$gris-oscuro, 40);
         display: flex;
@@ -72,15 +70,13 @@
             border-radius: 1rem;
         }
     }
-
-    &__icono{
+    &__icono {
         font-size: 2rem;
     }
-
     &__menu-texto {
         font-size: 1.1rem;
-        font-size: v.$bold;
         text-transform: uppercase;
+        font-weight: v.$bold;
         margin-top: .5rem;
     }
 
@@ -100,7 +96,6 @@
             margin-bottom: 5rem;
         }
     }
-
     &__boton {
         @include m.boton(v.$azul, v.$blanco);
         text-transform: uppercase;
@@ -109,12 +104,13 @@
             width: auto;
         }
     }
+
     &__contenedor {
         @include m.shadow;
         background-color: v.$blanco;
         padding: 2rem;
         border-radius: 1rem;
-
+        margin-top: 5rem;
     }
 
     &__formulario {
