--- a/src/scss/admin/_table.scss
+++ b/src/scss/admin/_table.scss
@@ -1,7 +1,7 @@
 @use 'base/mixins' as m;
 @use 'base/variables' as v;
 
-.table{
+.table {
     width: 100%;
     border-collapse: collapse;
 
@@ -13,11 +13,13 @@
         padding: 1rem;
         text-align: left;
     }
+
     &__tr {
-        &:nth-child(even) {
+        &:nth-of-type(even) {
             background-color: v.$gris-claro;
         }
     }
+
     &__td {
         padding: 1.5rem 1rem;
 
@@ -29,22 +31,18 @@
             align-items: center;
         }
     }
+
     &__accion {
+        all: unset;
         text-transform: uppercase;
         font-size: 1.4rem;
         font-weight: v.$bold;
-
         &--editar {
-            border: none;
-            background-color: transparent;
             color: v.$azul;
         }
         &--eliminar {
-            border: none;
-            background-color: transparent;
-            color: v.$rojo;
+           color: v.$rojo;
         }
-
         &:hover {
             cursor: pointer;
         }
