--- a/src/scss/paginas/_conferencias.scss
+++ b/src/scss/paginas/_conferencias.scss
@@ -7,11 +7,12 @@
 }
 .eventos {
     $modificador: &;
+
     &__heading {
         color: v.$azul;
         margin: 5rem 0;
         text-align: left;
-        font-size: clamp(2rem, -0.8rem + 8vw, 6rem);
+        font-size: clamp(2rem, -0.8rem + 8vw,  6rem);
     }
 
     &__fecha {
@@ -33,7 +34,7 @@
         }
     }
 
-    .swiper-button-next,
+    .swiper-button-next, 
     .swiper-button-prev {
         color: rgba(v.$blanco, .5);
     }
@@ -49,18 +50,12 @@
         background-color: v.$azul;
         color: v.$blanco;
         transition: 300ms background-color ease;
-
         &:hover {
-            background-color: darken(v.$azul, 10);
+            background-color: darken(v.$azul, 10%);
         }
     }
-    &__introduccion {
-        font-size: 1.6rem;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-    }
+
+
     &__nombre {
         font-size: 2rem;
         margin: 0;
@@ -69,6 +64,14 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
     }
+    &__introduccion {
+        font-size: 1.6rem;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+
     &__autor-info {
         display: flex;
         gap: 2rem;
