--- a/src/scss/paginas/inicio/_boletos.scss
+++ b/src/scss/paginas/inicio/_boletos.scss
@@ -2,14 +2,11 @@
 @use 'base/variables' as v;
 
 .boletos {
-
     &__grid {
         @include m.contenedor-sm;
         @include m.grid(1, 5rem);
     }
-
 }
-
 
 .boleto {
     width: min(100% - 5rem, 65rem);
@@ -18,7 +15,6 @@
     border-radius: 2rem;
     color: v.$blanco;
     position: relative;
-
     &::before,
     &::after {
         position: absolute;
@@ -33,7 +29,6 @@
         clip-path: circle(50% at 25% 50%);
         left: 0;
     }
-
     &::after {
         clip-path: circle(50% at 75% 50%);
         right: 0;
@@ -42,34 +37,32 @@
     &--presencial {
         background-color:hsla(178,100%,39%,1);
         background-image:
-        radial-gradient(at 81% 38%, hsla(209,100%,47%,1) 0px, transparent 50%),
-        radial-gradient(at 99% 5%, hsla(178,100%,39%,1) 0px, transparent 50%),
-        radial-gradient(at 52% 30%, hsla(209,100%,47%,1) 0px, transparent 50%),
-        radial-gradient(at 88% 8%, hsla(178,100%,39%,1) 0px, transparent 50%),
-        radial-gradient(at 13% 23%, hsla(209,100%,47%,1) 0px, transparent 50%),
-        radial-gradient(at 95% 4%, hsla(178,100%,39%,1) 0px, transparent 50%),
-        radial-gradient(at 39% 67%, hsla(209,100%,47%,1) 0px, transparent 50%);
+        radial-gradient(at 40% 20%, hsla(209,100%,47%,1) 0px, transparent 50%),
+        radial-gradient(at 80% 0%, hsla(178,100%,39%,1) 0px, transparent 50%),
+        radial-gradient(at 69% 82%, hsla(209,100%,47%,1) 0px, transparent 50%),
+        radial-gradient(at 26% 91%, hsla(178,100%,39%,1) 0px, transparent 50%),
+        radial-gradient(at 0% 100%, hsla(209,100%,47%,1) 0px, transparent 50%),
+        radial-gradient(at 27% 22%, hsla(178,100%,39%,1) 0px, transparent 50%),
+        radial-gradient(at 0% 0%, hsla(209,100%,47%,1) 0px, transparent 50%);
     }
-
     &--virtual {
         background-color: v.$secundario;
     }
-
     &--gratis {
         background-color: v.$azul;
     }
+
+    
 
     &__logo {
         @include m.logo;
         @include m.texto-fluido(2rem, 4rem);
     }
-
     &__plan {
-        font-size: 2.5rem;
+        font-size: 2rem;
         text-transform: uppercase;
         margin: 3rem 0 0 0;
     }
-
     &__precio {
         margin: 3rem 0 0 0;
         font-weight: v.$black;
@@ -81,7 +74,6 @@
         display: flex;
         justify-content: center;
     }
-
     &__enlace {
         @include m.boton(v.$azul, v.$blanco);
         width: auto;
@@ -93,7 +85,6 @@
         width: 30rem;
         height: 50rem;
         padding: 10rem 3rem;
-        
         @include m.tablet {
             width: 60rem;
             height: 30rem;
@@ -107,14 +98,13 @@
             @include m.texto-fluido(2rem, 3rem);
             margin: 0;
             text-align: left;
+    
         }
-
         #{$modificador}__nombre {
-            font-size: 2.2rem;
-            text-transform: uppercase;
-            font-weight: v.$black;
+           font-size: 2.4rem;
+           text-transform: uppercase;
+           font-weight: v.$black;
         }
-
         #{$modificador}__codigo {
             font-size: 4rem;
             font-weight: v.$bold;
@@ -126,14 +116,14 @@
             width: 100%;
 
             @include m.tablet {
-                transform: rotate(90deg);
-                transform-origin: 0 0;
-                top: 0;
-                left: calc(100% - 5rem);
-                width: 30rem;
+               rotate: 90deg;
+               transform-origin: 0 0;
+               top: 0;
+               left: calc(100% - 5rem);
+               width: 30rem;
             }
-
         }
+
 
     }
 
@@ -154,7 +144,7 @@
         top: calc(100% - 5rem);
         @include m.tablet {
             clip-path: circle(50% at 75% 50%);
-            left: calc(100% - 5rem);
+            left:  calc(100% - 5rem);
             top: calc(50% - 2.5rem);
         }
     }
