--- a/src/scss/ui/header/_header.scss
+++ b/src/scss/ui/header/_header.scss
@@ -2,13 +2,13 @@
 @use 'base/mixins' as m;
 
 .header {
-    min-height: 70rem;
-    background-image: url(../img/grafico.svg), url(../img/grafico.svg), 
-    linear-gradient(to right, rgba(v.$negro, 1), rgba(v.$negro, .5) ), 
-    image-set( url(../img/header.avif) 1x, url(../img/header.webp) 1x, url(../img/header.jpg) 1x );
+    min-height: 60rem;
+    background-image: url(../img/grafico.svg), url(../img/grafico.svg), linear-gradient(to right, rgba(v.$negro, 1), rgba(v.$negro, .5)  ), image-set( url(../img/header.avif) 1x, url(../img/header.webp) 1x, url(../img/header.jpg) 1x );
+
     background-repeat: no-repeat;
     background-size: 400px, 400px, cover, cover;
-    background-position: top left, bottom right, center center, center center;
+    background-position: top left, bottom right, center center, center center ;
+
 
     &__contenedor {
         @include m.contenedor;
@@ -22,7 +22,6 @@
         @include m.tablet {
             justify-content: flex-end;
         }
-
     }
 
     &__enlace {
@@ -34,14 +33,12 @@
     &__submit {
         @extend .header__enlace;
     }
-
     &__contenido {
         padding-top: 10rem;
         @include m.tablet {
-           padding-top: 5rem;
+            padding-top: 5rem;
         }
     }
-
     &__logo {
         @include m.texto-fluido(2rem, 8rem);
         @include m.texto-degradado(v.$azul, v.$secundario);
@@ -51,7 +48,6 @@
             display: inline-block;
         }
     }
-
     &__texto {
         font-size: 3rem;
         font-weight: v.$bold;
