--- a/src/scss/ui/header/_navegacion.scss
+++ b/src/scss/ui/header/_navegacion.scss
@@ -1,5 +1,5 @@
-@use 'base/mixins' as m;
 @use 'base/variables' as v;
+@use 'base/mixins' as m;
 
 .navegacion {
     display: flex;
@@ -7,7 +7,7 @@
     @include m.desktop {
         flex-direction: row;
     }
-
+  
     &__enlace {
         color: v.$blanco;
         font-size: 2rem;
@@ -15,13 +15,10 @@
         font-weight: v.$black;
         text-transform: uppercase;
         text-align: center;
-        
-        &--actual {
-            background-color: darken(v.$blanco, 7%);
-            color: v.$azul;
-        }
+
+        &--actual,
         &:hover {
-            background-color: lighten(v.$gris-oscuro, 55%);
+            background-color: v.$blanco;
             color: v.$azul;
         }
     }
